--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,12 @@ name = P5pack
 
 [ReadmeFromPod]
 ; disable = true
-filename = lib/P5pack.pm6
+filename = lib/P5pack.rakumod
 
 [PruneFiles]
 ; match = ^ 'xt/'
+
+[Badges]
+provider = github-actions/test
+
+[UploadToZef]
