--- a/dist.ini
+++ b/dist.ini
@@ -2,12 +2,14 @@ name = P5pack
 
 [ReadmeFromPod]
 ; disable = true
-filename = lib/P5pack.rakumod
+filename = doc/P5pack.rakudoc
 
 [PruneFiles]
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
 
 [UploadToZef]
